--- a/config.json.example
+++ b/config.json.example
@@ -13,7 +13,11 @@
     "request_timeout": 10,
     "retry_count": 3,
     "retry_delay": 5,
-    "rate_limit_wait": 60
+    "rate_limit_wait": 60,
+    "fetch_rule": {
+      "mode": "recent_days",
+      "value": 7
+    }
   },
   "email": {
     "smtp_server": "smtp.example.com",
@@ -21,6 +25,13 @@
     "sender_email": "your_email@example.com",
     "sender_password": "your_password_here",
     "recipient_emails": ["recipient@example.com"]
+  },
+  "scheduler": {
+    "enabled": false,
+    "cron": "0 7 * * *",
+    "daily_time": "07:00",
+    "timezone": "Asia/Shanghai",
+    "interval_minutes": null
   },
   "scraper": {
     "headless": true,
