feat: 完善登录模块和UI
- 修复密码哈希兼容性问题（使用pbkdf2:sha256）
- 添加管理员登录功能和认证中间件
- 新增初始化设置向导（setup.html）
- 实现修改密码功能
- 重构UI设计系统（design-system.css和components.css）
- 新增页面：dashboard、bidding_hall、sources、settings
- 改进数据库配置和连接管理
- 添加用户模型和认证管理器
- 支持依赖注入以便于测试

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,17 @@ Thumbs.db
 .coverage
 htmlcov/
 .pytest_cache/
+
+# Custom configuration (contains sensitive data)
+custom.yml
+custom.json
+
+# Test and debug scripts
+tests/debug_*.py
+tests/test_*.py
+tests/reproduce_*.py
+tests/verify_*.py
+
+# Sample data scripts
+fetch_samples.py
+import_samples.py
